# ada-security

./: .gitignore  Makefile  Makefile.conf.in  Makefile.defaults  Makefile.in  NEWS  NEWS.md  NOTICE.txt  README  README.md  alire.toml  config.gpr  configure  configure.ac  configure.in  coverage.sh  dynamo.xml  mkdocs.yml  samples.gpr  samples.gpr.in  samples.properties  security.gpr  security.gpr.in  security_config.gpr  security_tests.gpr  security_tests.gpr.in  tests.gpr.in
.alire/: security.gpr  security_config.gpr
debian/: ada_libraries  changelog  control  copyright  docs  examples.gpr  libsecurity-doc.doc-base.ada-security-guide  libsecurity-doc.docs  rules  shlibs.local
distrib/: security.gpr.in
docs/: Installation.md  Security.md  Security_Auth.md  Security_Auth_OAuth_Googleplus.md  Security_Controllers.md  Security_OAuth.md  Security_OAuth_JWT.md  Security_OAuth_Servers.md  Security_Policies.md  Security_Random.md  index.md  links.txt  requirements.txt  title.md
regtests/: alire.toml  security-auth-openid-tests.adb  security-auth-openid-tests.ads  security-auth-tests.adb  security-auth-tests.ads  security-oauth-clients-tests.adb  security-oauth-clients-tests.ads  security-oauth-jwt-tests.adb  security-oauth-servers-tests.adb  security-oauth-servers-tests.ads  security-openid-tests.adb  security-openid-tests.ads  security-permissions-tests.adb  security-permissions-tests.ads  security-policies-tests.adb  security-policies-tests.ads  security-random-tests.adb  security-random-tests.ads  security-testsuite.adb  security-testsuite.ads  security_harness.adb  security_tests.gpr
regtests/files/: user_apps.properties
regtests/files/discover/: claimid.xrds  livejournal.xrds  myopenid.xrds  myspace.xrds  orange.xrds  steamcommunity.xrds  verisign.xrds  yahoo.xrds
regtests/files/permissions/: empty.xml  grants.xml  policy-with-role.xml  simple-policy.xml
regtests/src/: security-auth-tests.adb  security-auth-tests.ads  security-oauth-clients-tests.adb  security-oauth-clients-tests.ads  security-oauth-jwt-tests.adb  security-oauth-jwt-tests.ads  security-oauth-servers-tests.adb  security-oauth-servers-tests.ads  security-permissions-tests.adb  security-permissions-tests.ads  security-policies-tests.adb  security-policies-tests.ads  security-random-tests.adb  security-random-tests.ads  security-testsuite.adb  security-testsuite.ads  security_harness.adb
samples/: alire.toml  auth_cb.adb  auth_demo.adb  samples.gpr
samples/src/: auth_cb.adb  auth_cb.ads  auth_demo.adb  jwt.adb
samples/web/: success.thtml
samples/web/atlas/: login.html
samples/web/atlas/css/: users.css
src/: security-auth-oauth-facebook.adb  security-auth-oauth-facebook.ads  security-auth-oauth-github.adb  security-auth-oauth-github.ads  security-auth-oauth-googleplus.adb  security-auth-oauth-googleplus.ads  security-auth-oauth-yahoo.adb  security-auth-oauth-yahoo.ads  security-auth-oauth.adb  security-auth-oauth.ads  security-auth-openid.adb  security-auth-openid.ads  security-auth.adb  security-auth.ads  security-contexts.adb  security-contexts.ads  security-controllers-roles.adb  security-controllers-roles.ads  security-controllers-urls.adb  security-controllers-urls.ads  security-controllers.adb  security-controllers.ads  security-oauth-clients.adb  security-oauth-clients.ads  security-oauth-file_registry.adb  security-oauth-file_registry.ads  security-oauth-jwt-hs256.adb  security-oauth-jwt-hs256.ads  security-oauth-jwt.adb  security-oauth-jwt.ads  security-oauth-servers.adb  security-oauth-servers.ads  security-oauth.adb  security-oauth.ads  security-openid.adb  security-openid.ads  security-permissions.adb  security-permissions.ads  security-policies-roles.adb  security-policies-roles.ads  (+7 more)
uml/: security.zargo
